--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
     <title>Target Process poker game</title>
-    <link rel="stylesheet" href="../assets/app.css" media="screen" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/app.css" media="screen"/>
+    <link rel="stylesheet" href="../assets/app.css" media="screen"/>
+    <link rel="stylesheet" href="../assets/app.css" media="screen"/>
 </head>
 <body role="application">
-    <script type="text/x-handlebars">
-        <div>
-            {{outlet}}
-        </div>
-    </script>
+<script type="text/x-handlebars">
+    <div>
+        {{outlet}}
+    </div>
+</script>
 
-    <script src="../assets/loader.js"></script>
-    <script src="../assets/app.js"></script>
-    <script>
-        loader.require('ember-tppoker/main');
-    </script>
+<script src="../assets/loader.js"></script>
+<script src="../assets/app.js"></script>
+<script>
+    loader.require('ember-tppoker/main');
+</script>
 </body>
 </html>
